[package]
name = "truenas-acme-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
reqwest = { version = "0.11.13", features = ["blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
toml = "0.5.10"
