[package]
name = "truenas-acme-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.68", default-features = false }
argh = "0.1.10"
async-std = { version = "1.12.0", default-features = false, features = ["attributes"] }
serde = { version = "1.0.152", default-features = false }
serde_json = {  version = "1.0.91", default-features = false }
surf = { version = "2.3.2", default-features = false, features = ["curl-client"] }

[profile.release]
# strip = true
lto = true
opt-level = "z"
codegen-units = 1
